reduced vertical height for gallery. stop-gap for #39

--- a/_sass/_wax.scss
+++ b/_sass/_wax.scss
@@ -439,7 +439,7 @@ search box
   }
   .wax-gallery {
     margin: $margin auto;
-    min-height: 50vh;
+    min-height: 30vh;
     display: flex;
     flex-wrap: wrap;
     justify-content: flex-start;
